<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:layout_margin="5dp"
  >

    <TextView
        android:id="@+id/tv_notify_signin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text=""
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="#ff0425"
        android:gravity="center_vertical"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/edt_username_signin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:hint="@string/text_hint_username"
        android:layout_marginTop="50dp"
        />


    <EditText
        android:inputType="textPassword"
        android:id="@+id/edt_password_signin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:hint="@string/text_hint_password"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        android:gravity="center"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/btn_back_signin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_btn_back"
            style="@style/buttonStyle"
            android:layout_marginRight="30dp"
            android:textSize="17sp"
            android:background="@drawable/buton_border"
            />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_button_login"
            style="@style/buttonStyle"
            android:textSize="17sp"
            android:background="@drawable/buton_border"

            />
    </LinearLayout>


</LinearLayout>