<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".activity.DetailProduct">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBackgroundToolBar"
        app:title="Detail product"
        app:titleTextColor="@color/colorText_toolbar">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5">

            <ImageView
                android:id="@+id/thumnail_detail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical"
            android:weightSum="5">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical"
               android:layout_marginLeft="5dp"
                android:weightSum="4">

                <TextView
                    android:id="@+id/name_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"

                    android:paddingTop="5dp"
                    android:text="Productname"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6"
                        android:text="@string/label_price"
                        android:textColor="#f90703"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/price_details"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.4"
                        android:textColor="#f90703"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>



            </LinearLayout>

            <Spinner
                android:id="@+id/spn_quantily_details"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/spinner_quatily">

            </Spinner>
            <Button
                android:id="@+id/btn_buy_details"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/label_btn_add_cart" />


        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:text="@string/text_description"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_descripton_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="15dp" />
</LinearLayout>